# SUPER-60

./: DBMS.txt  Stuffs to do.txt  testAssessment.py
PythonRebornIn60/: LSP.py  OCP.py  SRP.py  abstract.py  address.py  animal.py  animals.py  bankAccounts.py  calculator.py  client.py  console.py  daimondInheritence.py  employee.py  employment.py  encapsulation.py  file.py  hiring.py  miniProject.py  multiAbstract.py  notification.py  payment.py  refactor.py  salary.py  shapes.py  stack.py  temperature.py  useSuper.py  vehicles.py
PythonRebornIn60/FastAPI/: Heros.py  app.py  book.py  main.py  models.py
PythonRebornIn60/File Handling/: Lab3.py  average.txt  data.csv  example.txt  filehandling.ipynb  functionalProgramming.ipynb  input.txt  output.txt  students.csv
PythonRebornIn60/MiniProject/: animals.py  habitat.py  sanctuary.py  staff.py
PythonRebornIn60/Python_and_SQLite/: HeroData.db  HeroTeamData.db  app.py  database.py  db.py  db2.py  main.py  models.py
SQL Queries/: MariaDB HeartiHealth.txt  SQL_LABS.txt
Task_Web_Scraping_Py3.10/: main.py  scrape_playwright.py  scrape_selenium.py
Tech round/: L1.java  LAB1.java  LAB2.java
Trainer Trainee/: TestMain.py  TestMain1.py  Train.py  sim.py
Unox Movie Theatre Management System/: ERRDiagram_UNOX.mwb.bak  unox_movie.sql
Web_Scraping/: lxml_test.py  pyautogui_sim.py  pyproject.toml  schedule_scrap.py  static_pages.py  urllib_test.py  using_playwright.py  using_selenium.py
Web_Scraping_Task/: main.py  pyproject.toml  scrape.py
Web_Scraping_Task/output_files/: emma.xlsx  emma1.xlsx  emmatest.xlsx
(+42 files in other folders)
