[project]
name = "web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "selenium>=4.34.2",
    "urllib3>=2.5.0",
    "webdriver-manager>=4.0.2",
]
