[project]
name = "web-scraping-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "selenium>=4.34.2",
    "streamlit>=1.47.1",
    "webdriver-manager>=4.0.2",
]
